force-app/main/default/objects/Account/fields/Activation_Specialist_LP__c.field-meta.xml
<CustomField>
    <fullName>Activation_Specialist_LP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activation Specialist (LP)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MerchantsZQfn</relationshipName>
    <type>Lookup</type>
</CustomField>