force-app/main/default/objects/Account/fields/ActivityAlert__c.field-meta.xml
<CustomField>
    <fullName>ActivityAlert__c</fullName>
    <formula>IF(
 AND(
	OR (ISBLANK(TECH_LastCreatedTaskDate__c), ADDMONTHS(TECH_LastCreatedTaskDate__c,1)&lt;NOW()),
	OR (ISBLANK(TECH_Last_due_date__c), TECH_Last_due_date__c-60 &gt; TODAY()) )

,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red flag&quot;),IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green flag&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity alert</label>
    <type>Text</type>
</CustomField>