force-app/main/default/objects/Account/fields/All_contacts_verified__c.field-meta.xml
<CustomField>
    <fullName>All_contacts_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All contacts verified</label>
    <type>Checkbox</type>
</CustomField>