force-app/main/default/objects/Account/fields/Amazon_ID__c.field-meta.xml
<CustomField>
    <fullName>Amazon_ID__c</fullName>
    <label>Amazon ID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>