force-app/main/default/objects/Account/fields/Api__c.field-meta.xml
<CustomField>
    <fullName>Api__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for api use only. Its aim is to prevent callout back after creation or modification coming from Back-Office.</description>
    <label>Api</label>
    <type>Checkbox</type>
</CustomField>