force-app/main/default/objects/Account/fields/API_FTP_integration__c.field-meta.xml
<CustomField>
    <fullName>API_FTP_integration__c</fullName>
    <label>Back Market API Integrations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integrators</valueSetName>
    </valueSet>
</CustomField>