force-app/main/default/objects/Account/fields/Back_Office_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back-Office Configuration</label>
    <type>Checkbox</type>
</CustomField>