force-app/main/default/objects/Account/fields/Back_Office_PK__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_PK__c</fullName>
    <description>Primary key from the equivalent record in the Back-Office database.</description>
    <externalId>true</externalId>
    <label>P.K.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>