force-app/main/default/objects/Account/fields/BackShip_Activated__c.field-meta.xml
<CustomField>
    <fullName>BackShip_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackShip Activated</label>
    <type>Checkbox</type>
</CustomField>