force-app/main/default/objects/Account/fields/Backwatch__c.field-meta.xml
<CustomField>
    <fullName>Backwatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backwatch Launching Phase</label>
    <type>Checkbox</type>
</CustomField>