force-app/main/default/objects/Account/fields/BackWatch_Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>BackWatch_Onboarding_Type__c</fullName>
    <label>Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type A</fullName>
            </value>
            <value>
                <fullName>Type B</fullName>
            </value>
            <value>
                <fullName>Type S</fullName>
            </value>
            <value>
                <fullName>Not Relevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>