force-app/main/default/objects/Account/fields/BizDev__c.field-meta.xml
<CustomField>
    <fullName>BizDev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BizDev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchants2</relationshipName>
    <type>Lookup</type>
</CustomField>