force-app/main/default/objects/Account/fields/BizDev_Buyback__c.field-meta.xml
<CustomField>
    <fullName>BizDev_Buyback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BizDev Buyback</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchants4</relationshipName>
    <type>Lookup</type>
</CustomField>