force-app/main/default/objects/Account/fields/BizDev_buyback_Team__c.field-meta.xml
<CustomField>
    <fullName>BizDev_buyback_Team__c</fullName>
    <formula>TEXT( BizDev_Buyback__r.Team__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BizDev buyback Team</label>
    <type>Text</type>
</CustomField>