force-app/main/default/objects/Account/fields/BizDev_Notes__c.field-meta.xml
<CustomField>
    <fullName>BizDev_Notes__c</fullName>
    <label>General Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>