force-app/main/default/objects/Account/fields/Branch_code_number__c.field-meta.xml
<CustomField>
    <fullName>Branch_code_number__c</fullName>
    <description>for US accounts</description>
    <label>Branch code number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>