force-app/main/default/objects/Account/fields/Business_flag__c.field-meta.xml
<CustomField>
    <fullName>Business_flag__c</fullName>
    <description>Old formula:
IF ( OR ( CONTAINS ( Last_Sales_Listings_or_Buybox_0_flag__c, &apos;Warning&apos;), 
CONTAINS ( Last_listings_10_flag__c, &apos;Warning&apos;), 
CONTAINS ( Last_Buyboxes_30_of_Listing_flag__c, &apos;Warning&apos;), 
CONTAINS ( Last_Sales_2_flag__c, &apos;Warning&apos;) ) , 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Warning!&quot;, 15, 15), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;All Good&quot;, 15, 15) 
)</description>
    <formula>IF (  OR(
   (Old_Last_Daily_Biz_Perf_Listings__c-Old_Last_Daily_Biz_Perf_Listings__c*0.25) &gt; Last_Daily_Biz_Perf_Listings__c , 
   (Old_Last_Daily_Biz_Perf_Listings__c-250) &gt;  Last_Daily_Biz_Perf_Listings__c,
   (Old_Last_Weekly_Biz_Perf_Listings__c -Old_Last_Weekly_Biz_Perf_Listings__c*0.25) &gt; Last_weekly_Biz_Perf_Listings__c  , 
   (Old_Last_Weekly_Biz_Perf_Listings__c-250) &gt;  Last_weekly_Biz_Perf_Listings__c,
   (Old_Last_Monthly_Biz_Perf_Listings__c-Old_Last_Monthly_Biz_Perf_Listings__c*0.25) &gt; Last_Monthly_Biz_Perf_Listings__c  , 
   (Old_Last_Monthly_Biz_Perf_Listings__c-250) &gt;  Last_Monthly_Biz_Perf_Listings__c,
   (Old_Last_Daily_Biz_Perf_Stocks__c-Old_Last_Daily_Biz_Perf_Stocks__c*0.25) &gt; Last_Daily_Biz_Perf_Stocks__c , 
   (Old_Last_Daily_Biz_Perf_Stocks__c-250) &gt;  Last_Daily_Biz_Perf_Stocks__c,
   (Old_Last_Weekly_Biz_Perf_Stocks__c -Old_Last_Weekly_Biz_Perf_Stocks__c*0.25) &gt; Last_weekly_Biz_Perf_Stocks__c  , 
   (Old_Last_Weekly_Biz_Perf_Stocks__c-250) &gt;  Last_weekly_Biz_Perf_Stocks__c,
   (Old_Last_Monthly_Biz_Perf_Stocks__c-Old_Last_Monthly_Biz_Perf_Stocks__c*0.25) &gt; Last_Monthly_Biz_Perf_Stocks__c  , 
   (Old_Last_Monthly_Biz_Perf_Stocks__c-250) &gt;  Last_Monthly_Biz_Perf_Stocks__c
),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Warning!&quot;, 15, 15), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;All Good&quot;, 15, 15) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business flag</label>
    <type>Text</type>
</CustomField>