force-app/main/default/objects/Account/fields/BuyBack_GMV_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_GMV_Last_30_Days__c</fullName>
    <label>BuyBack GMV Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>