force-app/main/default/objects/Account/fields/BuyBack_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Go_Live_Date__c</fullName>
    <label>BuyBack Go Live Date</label>
    <type>Date</type>
</CustomField>