force-app/main/default/objects/Account/fields/BuyBack_Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Last_Order_Date__c</fullName>
    <label>BuyBack Last Order Date</label>
    <type>Date</type>
</CustomField>