force-app/main/default/objects/Account/fields/Buyback_limitation__c.field-meta.xml
<CustomField>
    <fullName>Buyback_limitation__c</fullName>
    <label>Buyback limitation</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>