force-app/main/default/objects/Account/fields/Buyback_Limitation_before_alert__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Limitation_before_alert__c</fullName>
    <label>Buyback - Limitation before alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>