force-app/main/default/objects/Account/fields/Buyback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Notes__c</fullName>
    <label>Buyback Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>