force-app/main/default/objects/Account/fields/BuyBack_Orders_Last_30_Days_units__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Orders_Last_30_Days_units__c</fullName>
    <label>BuyBack Orders Last 30 Days (units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>