force-app/main/default/objects/Account/fields/Buyback_Ready_Targeted_countries__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Ready_Targeted_countries__c</fullName>
    <label>Buyback Ready Targeted countries</label>
    <summaryFilterItems>
        <field>Targeted_Country__c.Buyback_Live_Status__c</field>
        <operation>equals</operation>
        <value>Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>Targeted_Country__c.Merchant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>