force-app/main/default/objects/Account/fields/BuyBack_Stage__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Stage__c</fullName>
    <label>BuyBack Stage_old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>