force-app/main/default/objects/Account/fields/BuyBack_Status__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Status__c</fullName>
    <label>BuyBack Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>NMO</fullName>
            </value>
            <value>
                <fullName>Run</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>