force-app/main/default/objects/Account/fields/Bypass_MP_Automations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_MP_Automations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFT-260 : Allow to bypass automations about defective rate</description>
    <inlineHelpText>Allow to bypass automations about defective rate</inlineHelpText>
    <label>Bypass MP Automations</label>
    <type>Checkbox</type>
</CustomField>