force-app/main/default/objects/Account/fields/Certificate_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_expiration_date__c</fullName>
    <label>Certificate expiration date</label>
    <type>Date</type>
</CustomField>