force-app/main/default/objects/Account/fields/Challenging_Point__c.field-meta.xml
<CustomField>
    <fullName>Challenging_Point__c</fullName>
    <inlineHelpText>Sales challenging point.</inlineHelpText>
    <label>Challenging Point</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Master_Challenging_Point__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Challenging_points</valueSetName>
    </valueSet>
</CustomField>