force-app/main/default/objects/Account/fields/Challenging_Point_BuyBack__c.field-meta.xml
<CustomField>
    <fullName>Challenging_Point_BuyBack__c</fullName>
    <inlineHelpText>BuyBack challenging point.</inlineHelpText>
    <label>Challenging Point BuyBack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding KO</fullName>
            </value>
            <value>
                <fullName>Long Onboarding</fullName>
            </value>
            <value>
                <fullName>Not enough adds</fullName>
            </value>
            <value>
                <fullName>Too small</fullName>
            </value>
            <value>
                <fullName>Too big (diversification)</fullName>
            </value>
            <value>
                <fullName>Warehouse location</fullName>
            </value>
            <value>
                <fullName>Disagreement with T&amp;Cs</fullName>
            </value>
            <value>
                <fullName>Sales Onboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>