force-app/main/default/objects/Account/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Commission</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>