force-app/main/default/objects/Account/fields/Company_id_num__c.field-meta.xml
<CustomField>
    <fullName>Company_id_num__c</fullName>
    <label>Company id. num.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>