force-app/main/default/objects/Account/fields/Competitor_Country__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Country__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <description>Identify all the supply potential per country market</description>
    <label>Competitor Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>