force-app/main/default/objects/Account/fields/Components_Seller_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Components_Seller_Onboarding_Status__c</fullName>
    <label>Components - Seller Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Quality Approved</fullName>
            </value>
            <value>
                <fullName>Registering Paperwork</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>