force-app/main/default/objects/Account/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <label>Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Connection_Picklist</valueSetName>
    </valueSet>
</CustomField>