force-app/main/default/objects/Account/fields/Conversion_Delay__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Delay__c</fullName>
    <description>Delay between first contact and signature.</description>
    <formula>Date_entry_in_stage_NMO__c - Date_entry_in_stage_Negotiation__c</formula>
    <inlineHelpText>Delay between first contact and signature.</inlineHelpText>
    <label>Conversion Delay</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>