force-app/main/default/objects/Account/fields/Country2__c.field-meta.xml
<CustomField>
    <fullName>Country2__c</fullName>
    <formula>BillingCountry</formula>
    <inlineHelpText>This field is mandatory to move from Identification to first contact!</inlineHelpText>
    <label>OLD_Country</label>
    <type>Text</type>
</CustomField>