force-app/main/default/objects/Account/fields/Country_of_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Legal_Entity__c</fullName>
    <description>Country where this account has its legal entity</description>
    <label>Country of Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>