force-app/main/default/objects/Account/fields/Cumulated_buyback_last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_buyback_last_30_days__c</fullName>
    <label>Cumulated buyback last 30 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>