force-app/main/default/objects/Account/fields/Cumulated_Sales__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_Sales__c</fullName>
    <label>Cumulated Sales</label>
    <summarizedField>Performance_Data__c.Sales__c</summarizedField>
    <summaryFilterItems>
        <field>Performance_Data__c.Temporal_Granularity__c</field>
        <operation>equals</operation>
        <value>Daily</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Performance_Data__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Business</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Performance_Data__c.Targeted_Country_Copy__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Performance_Data__c.Merchant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>