force-app/main/default/objects/Account/fields/Current_Buyback_BizDev__c.field-meta.xml
<CustomField>
    <fullName>Current_Buyback_BizDev__c</fullName>
    <formula>IF(  BizDev_Buyback__c  =$User.Id ,&quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Buyback BizDev</label>
    <type>Text</type>
</CustomField>