force-app/main/default/objects/Account/fields/Current_NMO_Process_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_NMO_Process_Stage__c</fullName>
    <description>This Field is meant to know the Stage of the current Launching Phase Process.</description>
    <label>Current Launching Phase Process Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>