force-app/main/default/objects/Account/fields/Current_Onboarding_Process_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Onboarding_Process_Stage__c</fullName>
    <description>This Field is meant to know the Stage of the current Onboarding Process.</description>
    <label>Current Onboarding Process Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>