force-app/main/default/objects/Account/fields/Current_User_NB__c.field-meta.xml
<CustomField>
    <fullName>Current_User_NB__c</fullName>
    <description>Report yes if previous bizdev is my user</description>
    <formula>if( Previous_BizDev__r.Id =  $User.Id , &quot;yes&quot;, &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User NB</label>
    <type>Text</type>
</CustomField>