force-app/main/default/objects/Account/fields/CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser__c</fullName>
    <formula>IF(   OwnerId  =$User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentUser</label>
    <type>Text</type>
</CustomField>