force-app/main/default/objects/Account/fields/CurrentUser_BD__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser_BD__c</fullName>
    <formula>IF( BizDev__c =$User.Id ,&quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentUser-BD</label>
    <type>Text</type>
</CustomField>