force-app/main/default/objects/Account/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Information</label>
    <type>Checkbox</type>
</CustomField>