force-app/main/default/objects/Account/fields/Daily_Biz_Perf_cumulated_Sales__c.field-meta.xml
<CustomField>
    <fullName>Daily_Biz_Perf_cumulated_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Biz Perf cumulated Sales</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>