force-app/main/default/objects/Account/fields/Date_Buyback_Quality_Test_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Buyback_Quality_Test_1__c</fullName>
    <label>Date - Buyback Quality Test #1</label>
    <type>Date</type>
</CustomField>