force-app/main/default/objects/Account/fields/Date_Entry_in_BuyBack_Future_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_BuyBack_Future_Partnership__c</fullName>
    <label>Date Entry in BuyBack Future Partnership</label>
    <type>Date</type>
</CustomField>