force-app/main/default/objects/Account/fields/Date_Entry_in_BuyBack_Identification__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_BuyBack_Identification__c</fullName>
    <label>Date Entry in BuyBack Identification</label>
    <type>Date</type>
</CustomField>