force-app/main/default/objects/Account/fields/Date_Entry_in_BuyBack_NMO__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_BuyBack_NMO__c</fullName>
    <label>Date Entry in BuyBack Launching Phase</label>
    <type>Date</type>
</CustomField>