force-app/main/default/objects/Account/fields/Date_Entry_in_BuyBack_Not_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_BuyBack_Not_Relevant__c</fullName>
    <label>Date Entry in BuyBack Not Relevant</label>
    <type>Date</type>
</CustomField>