force-app/main/default/objects/Account/fields/Date_Entry_in_BuyBack_Offline__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_BuyBack_Offline__c</fullName>
    <label>Date Entry in BuyBack Offline</label>
    <type>Date</type>
</CustomField>