force-app/main/default/objects/Account/fields/Date_Entry_in_BuyBack_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_BuyBack_Onboarding__c</fullName>
    <label>Date Entry in BuyBack Onboarding</label>
    <type>Date</type>
</CustomField>