force-app/main/default/objects/Account/fields/Date_Entry_in_BuyBack_Run__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_BuyBack_Run__c</fullName>
    <label>Date Entry in BuyBack Run</label>
    <type>Date</type>
</CustomField>