force-app/main/default/objects/Account/fields/Date_entry_in_stage_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_entry_in_stage_First_Contact__c</fullName>
    <description>Filled by workflow</description>
    <label>Date entry in stage First Contact</label>
    <type>Date</type>
</CustomField>