force-app/main/default/objects/Account/fields/Date_entry_in_stage_Offline__c.field-meta.xml
<CustomField>
    <fullName>Date_entry_in_stage_Offline__c</fullName>
    <description>Filled by Workflow</description>
    <label>Date entry in stage Offline</label>
    <type>Date</type>
</CustomField>