force-app/main/default/objects/Account/fields/Date_of_first_contact_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_contact_Buyback__c</fullName>
    <label>Date of first contact - Buyback</label>
    <type>Date</type>
</CustomField>