force-app/main/default/objects/Account/fields/Date_of_first_sale__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_sale__c</fullName>
    <label>Date of first sale</label>
    <type>Date</type>
</CustomField>