force-app/main/default/objects/Account/fields/Date_Quality_Test_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Quality_Test_2__c</fullName>
    <label>Date - Quality Test #2</label>
    <type>Date</type>
</CustomField>