force-app/main/default/objects/Account/fields/Debit_note__c.field-meta.xml
<CustomField>
    <fullName>Debit_note__c</fullName>
    <inlineHelpText>This amount is the actual monetary balance of your merchants, or total amount due (updated daily). It takes into account : the last bill, the deposit amount, cash to be paid.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>