force-app/main/default/objects/Account/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>