force-app/main/default/objects/Account/fields/Diagnostic_software_s_used__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_software_s_used__c</fullName>
    <label>Diagnostic Software Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Diagnostic_Software</valueSetName>
    </valueSet>
</CustomField>